syntax = "proto3";

package commits;

option go_package="/commits";

service CommitsService{
    rpc GetCommitFetchHistory (CommitFetchHistoryRequest) returns (CommitFetchHistoryResponse);
}


message CommitFetchHistoryRequest{
    string repositoryName = 1;
}

message CommitFetchHistoryResponse{
    string lastFetchTime = 1;
    int32  lastPage = 2;
}
